Precache manifest should not be added to fetcher pool which is full

Fetcher pool accepts limited number of requests which are fetched in
parallel. If the pool is full, precache manifest resources should not be
added to it.

BUG=606231

Review-Url: https://codereview.chromium.org/2037903002
Cr-Commit-Position: refs/heads/master@{#399387}

Former-commit-id: b2754f713e984d267353ce00d8a9e5ff6a6fafae