components/precache/core/fetcher_pool.h
@@ -8,6 +8,7 @@
 #include <memory>
 #include <unordered_map>
 
+#include "base/gtest_prod_util.h"
 #include "base/logging.h"
 
 namespace precache {
@@ -70,6 +71,9 @@ class FetcherPool {
   const std::unordered_map<const T*, std::unique_ptr<T>>& elements() const {
     return elements_;
   }
+
+  // Returns the maximum size of the pool.
+  size_t max_size() const { return max_size_; }
 
  private:
   const size_t max_size_;
